--- a/perl-core/Digest-MD5/ChangeLog
+++ b/perl-core/Digest-MD5/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for perl-core/Digest-MD5
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Digest-MD5/ChangeLog,v 1.41 2011/12/11 09:05:55 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Digest-MD5/ChangeLog,v 1.42 2011/12/11 21:57:04 maekke Exp $
+
+  11 Dec 2011; Markus Meier <maekke@gentoo.org> Digest-MD5-2.510.0.ebuild:
+  arm stable, bug #392845
 
   11 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   Digest-MD5-2.510.0.ebuild:
