--- a/dev-perl/ExtUtils-XSpp/ChangeLog
+++ b/dev-perl/ExtUtils-XSpp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/ExtUtils-XSpp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/ExtUtils-XSpp/ChangeLog,v 1.22 2011/12/04 17:37:44 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/ExtUtils-XSpp/ChangeLog,v 1.23 2011/12/11 22:06:15 maekke Exp $
+
+  11 Dec 2011; Markus Meier <maekke@gentoo.org> ExtUtils-XSpp-0.160.200.ebuild:
+  x86 stable, bug #388765
 
   04 Dec 2011; Markos Chandras <hwoarang@gentoo.org>
   ExtUtils-XSpp-0.160.200.ebuild:
