--- a/kde-base/kstars/ChangeLog
+++ b/kde-base/kstars/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kstars
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kstars/ChangeLog,v 1.207 2011/12/11 18:52:30 alexxy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kstars/ChangeLog,v 1.208 2011/12/11 23:51:36 dilfridge Exp $
+
+  11 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
+  -files/kstars-4.3.80-solaris.patch:
+  Cleanup
 
 *kstars-4.7.4 (11 Dec 2011)
 
