--- a/kde-base/solid/ChangeLog
+++ b/kde-base/solid/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/solid
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/solid/ChangeLog,v 1.123 2011/12/11 18:52:09 alexxy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/solid/ChangeLog,v 1.124 2011/12/11 23:49:50 dilfridge Exp $
+
+  11 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
+  -files/solid-4.3.1-darwin-compile-powermanager.patch,
+  -files/solid-4.4.69-darwin-compile-powermanager.patch:
+  Cleanup
 
 *solid-4.7.4 (11 Dec 2011)
 
