--- a/kde-base/kdebindings-ruby/ChangeLog
+++ b/kde-base/kdebindings-ruby/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdebindings-ruby
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdebindings-ruby/Attic/ChangeLog,v 1.50 2011/08/15 21:24:11 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdebindings-ruby/Attic/ChangeLog,v 1.51 2011/12/12 01:02:11 abcd Exp $
+
+  12 Dec 2011; Jonathan Callen <abcd@gentoo.org>
+  -files/kdebindings-ruby-fix-linkage.patch:
+  rm old files
 
   15 Aug 2011; Markus Meier <maekke@gentoo.org> kdebindings-ruby-4.6.5.ebuild:
   x86 stable, bug #377465
