--- a/dev-php/PEAR-Cache_Lite/ChangeLog
+++ b/dev-php/PEAR-Cache_Lite/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-php/PEAR-Cache_Lite
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-Cache_Lite/ChangeLog,v 1.29 2011/03/03 10:20:44 olemarkus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-Cache_Lite/ChangeLog,v 1.30 2011/12/12 10:46:27 olemarkus Exp $
+
+*PEAR-Cache_Lite-1.7.12 (12 Dec 2011)
+
+  12 Dec 2011; Ole Markus With <olemarkus@gentoo.org>
+  +PEAR-Cache_Lite-1.7.12.ebuild:
+  Version bump
 
 *PEAR-Cache_Lite-1.7.9 (03 Mar 2011)
 
