--- a/media-libs/gavl/ChangeLog
+++ b/media-libs/gavl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/gavl
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gavl/ChangeLog,v 1.16 2011/12/10 23:21:55 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gavl/ChangeLog,v 1.17 2011/12/12 11:55:29 jer Exp $
+
+  12 Dec 2011; Jeroen Roovers <jer@gentoo.org> gavl-1.2.0.ebuild:
+  Stable for HPPA (bug #394291).
 
   10 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> gavl-1.2.0.ebuild:
   Use autotools-utils.eclass in order to drop libtool archive(s).
