--- a/dev-util/unifdef/ChangeLog
+++ b/dev-util/unifdef/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/unifdef
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/unifdef/ChangeLog,v 1.18 2011/07/09 09:14:31 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/unifdef/ChangeLog,v 1.19 2011/12/12 11:59:01 jer Exp $
+
+  12 Dec 2011; Jeroen Roovers <jer@gentoo.org> unifdef-2.6.ebuild:
+  Stable for HPPA (bug #394069).
 
   09 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> unifdef-2.3.ebuild:
   ppc64 stable wrt #367271
