--- a/dev-libs/xmlrpc-c/ChangeLog
+++ b/dev-libs/xmlrpc-c/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/xmlrpc-c
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/xmlrpc-c/ChangeLog,v 1.100 2011/11/28 13:17:31 naota Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/xmlrpc-c/ChangeLog,v 1.101 2011/12/12 15:43:41 pva Exp $
+
+  12 Dec 2011; Peter Volkov <pva@gentoo.org> xmlrpc-c-1.28.00.ebuild,
+  xmlrpc-c-1.28.03.ebuild:
+  Add readline into deps, bug #393267 thank Agostino Sarubbo for report.
 
   28 Nov 2011; Naohiro Aota <naota@gentoo.org> xmlrpc-c-1.28.03.ebuild:
   Add ~x86-fbsd. Bug #267616
