--- a/app-emacs/psgml/ChangeLog
+++ b/app-emacs/psgml/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/psgml
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/psgml/ChangeLog,v 1.15 2011/12/09 00:32:27 ulm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/psgml/ChangeLog,v 1.16 2011/12/12 18:58:41 ago Exp $
+
+  12 Dec 2011; Agostino Sarubbo <ago@gentoo.org> psgml-1.3.2.ebuild:
+  Stable for AMD64, wrt bug #394013
 
   09 Dec 2011; Ulrich Mueller <ulm@gentoo.org> psgml-1.3.2.ebuild:
   Whitespace.
