--- a/media-gfx/converseen/ChangeLog
+++ b/media-gfx/converseen/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/converseen
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/converseen/ChangeLog,v 1.1 2011/12/07 20:31:27 maksbotan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/converseen/ChangeLog,v 1.2 2011/12/12 19:11:23 maksbotan Exp $
+
+  12 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org> converseen-0.4.7.ebuild:
+  Fix bug 393557, thanks to Nikoli
 
 *converseen-0.4.7 (07 Dec 2011)
 
