--- a/app-vim/cvsmenu/ChangeLog
+++ b/app-vim/cvsmenu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-vim/cvsmenu
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-vim/cvs-repo/gentoo-x86/app-vim/cvsmenu/ChangeLog,v 1.15 2011/12/11 15:58:12 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-vim/cvs-repo/gentoo-x86/app-vim/cvsmenu/ChangeLog,v 1.16 2011/12/12 19:24:41 ago Exp $
+
+  12 Dec 2011; Agostino Sarubbo <ago@gentoo.org> cvsmenu-1.147.ebuild:
+  Stable
 
   11 Dec 2011; Raúl Porcel <armin76@gentoo.org> cvsmenu-1.80.ebuild,
   cvsmenu-1.147.ebuild:
