--- a/dev-ruby/test-unit/ChangeLog
+++ b/dev-ruby/test-unit/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/test-unit
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/test-unit/ChangeLog,v 1.47 2011/12/13 06:41:39 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/test-unit/ChangeLog,v 1.48 2011/12/13 06:52:11 graaff Exp $
+
+*test-unit-2.4.3 (13 Dec 2011)
+
+  13 Dec 2011; Hans de Graaff <graaff@gentoo.org> +test-unit-2.4.3.ebuild:
+  Version bump.
 
   13 Dec 2011; Hans de Graaff <graaff@gentoo.org> -test-unit-2.2.0.ebuild,
   -test-unit-2.3.0.ebuild:
