--- a/app-shells/zsh/ChangeLog
+++ b/app-shells/zsh/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/zsh
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/zsh/ChangeLog,v 1.171 2011/12/07 16:20:53 radhermit Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/zsh/ChangeLog,v 1.172 2011/12/13 16:41:59 jer Exp $
+
+  13 Dec 2011; Jeroen Roovers <jer@gentoo.org> zsh-4.3.12.ebuild:
+  Stable for HPPA (bug #394409).
 
 *zsh-4.3.14 (07 Dec 2011)
 
