--- a/net-analyzer/tcpflow/ChangeLog
+++ b/net-analyzer/tcpflow/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/tcpflow
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/tcpflow/ChangeLog,v 1.20 2011/12/11 09:05:23 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/tcpflow/ChangeLog,v 1.21 2011/12/13 16:42:20 ago Exp $
+
+  13 Dec 2011; Agostino Sarubbo <ago@gentoo.org> tcpflow-1.0.2.ebuild:
+  Stable for AMD64, wrt bug #393239
 
   11 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> tcpflow-1.0.2.ebuild:
   x86 stable wrt bug #393239
