--- a/net-analyzer/tcpflow/ChangeLog
+++ b/net-analyzer/tcpflow/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/tcpflow
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/tcpflow/ChangeLog,v 1.21 2011/12/13 16:42:20 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/tcpflow/ChangeLog,v 1.22 2011/12/13 17:12:53 jer Exp $
+
+  13 Dec 2011; Jeroen Roovers <jer@gentoo.org> -tcpflow-0.21.ebuild,
+  -tcpflow-1.0.0.ebuild:
+  Old.
 
   13 Dec 2011; Agostino Sarubbo <ago@gentoo.org> tcpflow-1.0.2.ebuild:
   Stable for AMD64, wrt bug #393239
