--- a/sys-apps/usbutils/ChangeLog
+++ b/sys-apps/usbutils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/usbutils
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/usbutils/ChangeLog,v 1.125 2011/12/13 17:38:22 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/usbutils/ChangeLog,v 1.126 2011/12/13 18:23:22 jer Exp $
+
+  13 Dec 2011; Jeroen Roovers <jer@gentoo.org> usbutils-004.ebuild:
+  Stable for HPPA (bug #394577).
 
 *usbutils-005 (13 Dec 2011)
 
