--- a/app-vim/supertab/ChangeLog
+++ b/app-vim/supertab/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-vim/supertab
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-vim/cvs-repo/gentoo-x86/app-vim/supertab/ChangeLog,v 1.37 2011/12/11 15:54:14 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-vim/cvs-repo/gentoo-x86/app-vim/supertab/ChangeLog,v 1.38 2011/12/14 08:52:53 phajdan.jr Exp $
+
+  14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> supertab-1.6.ebuild:
+  x86 stable wrt bug #393563
 
   11 Dec 2011; Raúl Porcel <armin76@gentoo.org> supertab-1.1.ebuild,
   supertab-1.5.ebuild, supertab-1.6.ebuild:
