--- a/app-admin/augeas/ChangeLog
+++ b/app-admin/augeas/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/augeas
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/augeas/ChangeLog,v 1.26 2011/08/24 16:45:30 matsuu Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/augeas/ChangeLog,v 1.27 2011/12/14 09:10:25 phajdan.jr Exp $
+
+  14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> augeas-0.9.0.ebuild:
+  x86 stable wrt bug #391565
 
 *augeas-0.9.0 (24 Aug 2011)
 
