--- a/app-portage/conf-update/ChangeLog
+++ b/app-portage/conf-update/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-portage/conf-update
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-portage/cvs-repo/gentoo-x86/app-portage/conf-update/ChangeLog,v 1.28 2011/12/12 20:24:33 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-portage/cvs-repo/gentoo-x86/app-portage/conf-update/ChangeLog,v 1.29 2011/12/14 09:20:13 phajdan.jr Exp $
+
+  14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  conf-update-1.0.1.ebuild:
+  x86 stable wrt bug #393703
 
   12 Dec 2011; Agostino Sarubbo <ago@gentoo.org> conf-update-1.0.1.ebuild:
   Stable for AMD64, wrt bug #393703
