--- a/dev-tcltk/tclreadline/ChangeLog
+++ b/dev-tcltk/tclreadline/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-tcltk/tclreadline
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tcltk/cvs-repo/gentoo-x86/dev-tcltk/tclreadline/ChangeLog,v 1.15 2011/12/12 08:53:38 jlec Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tcltk/cvs-repo/gentoo-x86/dev-tcltk/tclreadline/ChangeLog,v 1.16 2011/12/14 09:26:49 phajdan.jr Exp $
+
+  14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  tclreadline-2.1.0-r1.ebuild:
+  x86 stable wrt bug #393825
 
   12 Dec 2011; Justin Lecher <jlec@gentoo.org> tclreadline-2.1.0.ebuild,
   tclreadline-2.1.0-r1.ebuild, metadata.xml:
