--- a/dev-util/cppunit/ChangeLog
+++ b/dev-util/cppunit/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/cppunit
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cppunit/ChangeLog,v 1.54 2011/12/14 10:58:46 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cppunit/ChangeLog,v 1.55 2011/12/14 11:09:14 scarabeus Exp $
+
+  14 Dec 2011; Tomáš Chvátal <scarabeus@gentoo.org>
+  cppunit-1.12.1-r1.ebuild:
+  Say goodbye to .la archive and make static lib optional.
 
   14 Dec 2011; Tomáš Chvátal <scarabeus@gentoo.org>
   cppunit-1.12.1-r1.ebuild:
