--- a/dev-java/ant-eclipse-ecj/ChangeLog
+++ b/dev-java/ant-eclipse-ecj/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/ant-eclipse-ecj
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/ant-eclipse-ecj/ChangeLog,v 1.28 2011/12/14 09:06:55 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/ant-eclipse-ecj/ChangeLog,v 1.29 2011/12/14 18:50:23 ago Exp $
+
+  14 Dec 2011; Agostino Sarubbo <ago@gentoo.org> ant-eclipse-ecj-3.7.1.ebuild:
+  Stable for AMD64, wrt bug #392391
 
   14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   ant-eclipse-ecj-3.7.1.ebuild:
