--- a/sys-apps/usbutils/ChangeLog
+++ b/sys-apps/usbutils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/usbutils
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/usbutils/ChangeLog,v 1.127 2011/12/14 17:21:58 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/usbutils/ChangeLog,v 1.128 2011/12/14 22:45:47 ago Exp $
+
+  14 Dec 2011; Agostino Sarubbo <ago@gentoo.org> usbutils-004.ebuild:
+  Stable for AMD64, wrt bug #394577
 
   14 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> usbutils-005.ebuild,
   +files/usbutils-005-missing-includes.patch:
