--- a/virtual/perl-CPAN-Meta-YAML/ChangeLog
+++ b/virtual/perl-CPAN-Meta-YAML/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for virtual/perl-CPAN-Meta-YAML
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-CPAN-Meta-YAML/ChangeLog,v 1.13 2011/12/07 01:41:19 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-CPAN-Meta-YAML/ChangeLog,v 1.14 2011/12/14 23:19:51 maekke Exp $
+
+  14 Dec 2011; Markus Meier <maekke@gentoo.org>
+  perl-CPAN-Meta-YAML-0.4.0.ebuild:
+  arm stable, bug #393397
 
   07 Dec 2011; Jeroen Roovers <jer@gentoo.org>
   perl-CPAN-Meta-YAML-0.4.0.ebuild:
