--- a/net-analyzer/pinger/ChangeLog
+++ b/net-analyzer/pinger/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/pinger
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/pinger/ChangeLog,v 1.14 2011/12/14 09:13:11 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/pinger/ChangeLog,v 1.15 2011/12/14 23:24:28 ago Exp $
+
+  14 Dec 2011; Agostino Sarubbo <ago@gentoo.org> pinger-0.32d.ebuild:
+  Stable for AMD64, wrt bug #393913
 
   14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> pinger-0.32d.ebuild:
   x86 stable wrt bug #393913
