--- a/dev-python/django/ChangeLog
+++ b/dev-python/django/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/django
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/django/ChangeLog,v 1.75 2011/12/14 22:16:14 floppym Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/django/ChangeLog,v 1.76 2011/12/14 23:44:08 floppym Exp $
+
+  14 Dec 2011; Mike Gilbert <floppym@gentoo.org> django-1.3.1-r1.ebuild,
+  django-9999.ebuild:
+  Drop bash-completion_pkg_postinst.
 
   14 Dec 2011; Mike Gilbert <floppym@gentoo.org> django-9999.ebuild:
   Call newbashcomp.
