--- a/virtual/perl-Perl-OSType/ChangeLog
+++ b/virtual/perl-Perl-OSType/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for virtual/perl-Perl-OSType
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Perl-OSType/ChangeLog,v 1.11 2011/12/07 01:59:35 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Perl-OSType/ChangeLog,v 1.12 2011/12/14 23:39:22 maekke Exp $
+
+  14 Dec 2011; Markus Meier <maekke@gentoo.org> perl-Perl-OSType-1.2.0.ebuild:
+  arm stable, bug #393397
 
   07 Dec 2011; Jeroen Roovers <jer@gentoo.org> perl-Perl-OSType-1.2.0.ebuild:
   Stable for HPPA (bug #393397).
