--- a/app-emacs/emacs-common-gentoo/ChangeLog
+++ b/app-emacs/emacs-common-gentoo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/emacs-common-gentoo
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/emacs-common-gentoo/ChangeLog,v 1.46 2011/12/13 22:20:27 ulm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/emacs-common-gentoo/ChangeLog,v 1.47 2011/12/15 07:22:59 ulm Exp $
+
+  15 Dec 2011; Ulrich Mueller <ulm@gentoo.org> emacs-common-gentoo-1.3.ebuild:
+  Don't (ab)use elisp-install for installing subdirs.el in the parent dir.
 
 *emacs-common-gentoo-1.3 (13 Dec 2011)
 
