--- a/sci-chemistry/rasmol/ChangeLog
+++ b/sci-chemistry/rasmol/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/rasmol
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/rasmol/ChangeLog,v 1.28 2011/12/14 22:31:16 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/rasmol/ChangeLog,v 1.29 2011/12/15 08:33:05 jlec Exp $
+
+  15 Dec 2011; Justin Lecher <jlec@gentoo.org> rasmol-2.7.5.1.ebuild,
+  rasmol-2.7.5.2.ebuild:
+  Add die after external commands
 
   14 Dec 2011; Agostino Sarubbo <ago@gentoo.org> rasmol-2.7.5.1.ebuild:
   Stable for AMD64, wrt bug #394085
