--- a/dev-ruby/minitest/ChangeLog
+++ b/dev-ruby/minitest/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/minitest
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/minitest/ChangeLog,v 1.61 2011/12/15 07:12:41 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/minitest/ChangeLog,v 1.62 2011/12/15 10:03:58 ago Exp $
+
+  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> minitest-2.6.2.ebuild:
+  Stable for AMD64, wrt bug #394781
 
   15 Dec 2011; Hans de Graaff <graaff@gentoo.org> minitest-2.6.2.ebuild:
   Drop ruby19 to create a stable candidate.
