--- a/media-video/ffmpeg/ChangeLog
+++ b/media-video/ffmpeg/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-video/ffmpeg
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.504 2011/12/09 13:59:29 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.505 2011/12/15 11:15:54 aballier Exp $
+
+  15 Dec 2011; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
+  pass user cflags as extra-cflags, disable optflags as we assume user cflags
+  contain them, do not disable opimizations since optflags are empty, bug
+  #392451
 
   09 Dec 2011; Alexis Ballier <aballier@gentoo.org> ffmpeg-0.8.7.ebuild,
   ffmpeg-9999.ebuild:
