--- a/dev-php/pecl-yaz/ChangeLog
+++ b/dev-php/pecl-yaz/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php5/pecl-yaz
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/pecl-yaz/ChangeLog,v 1.1 2011/12/14 22:52:16 mabi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/pecl-yaz/ChangeLog,v 1.2 2011/12/15 12:11:09 ago Exp $
+
+  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> pecl-yaz-1.1.1.ebuild:
+  Stable for AMD64, wrt bug #393965
 
   14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> pecl-yaz-1.1.1.ebuild:
   x86 stable wrt bug #393965
