--- a/media-fonts/sil-doulos/ChangeLog
+++ b/media-fonts/sil-doulos/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/sil-doulos
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/sil-doulos/ChangeLog,v 1.13 2011/12/14 23:31:36 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/sil-doulos/ChangeLog,v 1.14 2011/12/15 14:55:59 ago Exp $
+
+  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> sil-doulos-4.106.ebuild:
+  Stable for AMD64, wrt bug #393709
 
   14 Dec 2011; Markus Meier <maekke@gentoo.org> sil-doulos-4.106.ebuild:
   arm stable, bug #393709
