--- a/games-mud/kildclient/ChangeLog
+++ b/games-mud/kildclient/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-mud/kildclient
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-mud/cvs-repo/gentoo-x86/games-mud/kildclient/ChangeLog,v 1.4 2011/10/27 06:25:17 tetromino Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-mud/cvs-repo/gentoo-x86/games-mud/kildclient/ChangeLog,v 1.5 2011/12/15 15:35:52 ago Exp $
+
+  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> kildclient-2.9.0.ebuild:
+  Add ~amd64 and missing zlib RDEPEND, wrt bug #394395
 
   27 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
   kildclient-2.9.0.ebuild:
