--- a/net-analyzer/squid-graph/ChangeLog
+++ b/net-analyzer/squid-graph/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/squid-graph
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/squid-graph/ChangeLog,v 1.23 2011/12/14 09:29:54 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/squid-graph/ChangeLog,v 1.24 2011/12/15 16:11:10 ago Exp $
+
+  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> squid-graph-3.2-r1.ebuild:
+  Stable for AMD64, wrt bug #393877
 
   14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   squid-graph-3.2-r1.ebuild:
