--- a/media-libs/gd/ChangeLog
+++ b/media-libs/gd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/gd
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gd/ChangeLog,v 1.77 2011/12/15 16:40:57 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gd/ChangeLog,v 1.78 2011/12/15 16:52:33 vapier Exp $
+
+  15 Dec 2011; Mike Frysinger <vapier@gentoo.org> gd-2.0.35-r3.ebuild,
+  +files/gd-2.0.35-libpng-pkg-config.patch:
+  Use libpng's pkg-config files rather than xxx-config scripts.
 
   15 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> -gd-2.0.35-r1.ebuild,
   -gd-2.0.35-r2.ebuild:
