--- a/app-emulation/playonlinux/ChangeLog
+++ b/app-emulation/playonlinux/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/playonlinux
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/playonlinux/ChangeLog,v 1.15 2011/10/03 20:53:53 thev00d00 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/playonlinux/ChangeLog,v 1.16 2011/12/15 17:20:23 thev00d00 Exp $
+
+*playonlinux-4.0.14 (15 Dec 2011)
+
+  15 Dec 2011; Ian Whyman <thev00d00@gentoo.org> -playonlinux-4.0.12.ebuild,
+  +playonlinux-4.0.14.ebuild:
+  Bump to 4.0.14, fix bug #392575
 
 *playonlinux-4.0.12 (03 Oct 2011)
 
