--- a/net-analyzer/wireshark/ChangeLog
+++ b/net-analyzer/wireshark/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.323 2011/12/14 17:21:14 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.324 2011/12/15 19:15:05 grobian Exp $
+
+  15 Dec 2011; Fabian Groffen <grobian@gentoo.org> wireshark-1.6.4.ebuild:
+  Use EPREFIX/EROOT, bug #321309
 
   14 Dec 2011; Agostino Sarubbo <ago@gentoo.org> wireshark-1.6.4.ebuild:
   Stable for AMD64, wrt security bug #389255
