--- a/net-misc/leechcraft-knowhow/ChangeLog
+++ b/net-misc/leechcraft-knowhow/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/leechcraft-knowhow
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/leechcraft-knowhow/ChangeLog,v 1.1 2011/10/23 17:48:27 maksbotan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/leechcraft-knowhow/ChangeLog,v 1.2 2011/12/15 19:40:54 maksbotan Exp $
+
+*leechcraft-knowhow-0.4.96 (15 Dec 2011)
+
+  15 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org>
+  +leechcraft-knowhow-0.4.96.ebuild:
+  Bump net-misc/leechcraft-knowhow to 0.4.96, thanks to 0xd34df00d
 
 *leechcraft-knowhow-9999 (23 Oct 2011)
 
